tests/fail/trait_bounds_violation.stderr
tests/fail/trait_bounds_violation.tk:3:7: error[E0445]: Shape 'Data' manages raw pointers but does not implement 'drop'
tests/fail/trait_bounds_violation.tk:3:7: error[E0444]: Shape 'Data' manages resources but does not implement 'drop'
tests/fail/trait_bounds_violation.tk:3:7: error[E0458]: Shape 'Data' manages resources (raw pointers) but does not implement 'clone'
tests/fail/trait_bounds_violation.tk:12:19: error[E0422]: Type mismatch for member '*ptr': expected '*i32?', but got 'null'
tests/fail/trait_bounds_violation.tk:13:5: error[E0606]: Type 'Data' does not satisfy trait bound '@Send' for generic parameter 'T'
